Correct interpretation of return code

Since the 'no-match at all' condition of QRegExp::indexIn() also returns
a value that is 'true', the return value must be compared against -1 instead.

BUG: 374527